--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,11 @@
 <h1>My tasks</h1>
-<% @task.each do |task| %>
-
-<% end %>
+<ul>
+  <% @tasks.each do |task| %>
+    <input type="checkbox"><%= link_to task.title, task %> - <%= link_to 'Delete task', task_path(task),
+    method: :delete,
+    data: { confirm: "Are you sure?" }  %>
+    <br>
+  <% end %>
+</ul>
+<hr>
+<p><%= link_to 'Add a new task', new_task_path %></p>
